More style changes - more whitespace - always put logo on top - fix password reset form width

--- a/Scouts-en-Gidsen-Vlaanderen/login/resources/css/style.css
+++ b/Scouts-en-Gidsen-Vlaanderen/login/resources/css/style.css
@@ -31,34 +31,21 @@ body {
   align-items: center;
   width: calc(100% - 20px);
   margin: 0 auto;
-  padding-bottom: 20px;
-}
-
-@media (min-width: 992px) {
-  .login-form {
-    padding: 60px 0;
-    flex-direction: row;
-    justify-content: center;
-  }
+  padding-bottom: 40px;
 }
 
 .logo {
   display: block;
   margin: 20px;
-  font-size: max(60px, min(20vh, 200px));
+  font-size: max(60px, min(15vh, 200px));
   text-align: center;
   display: block;
   color: var(--primary);
 }
 
-@media (min-width: 992px) {
-  .logo {
-    font-size: 200px;
-  }
-}
-
 main {
-  max-width: 360px;
+  width: 100%;
+  max-width: 380px;
   padding: 20px;
   background-color: var(--surface);
   border-radius: 8px;
@@ -68,11 +55,12 @@ main {
 h2 {
   text-align: center;
   font-size: 18px;
-  padding-bottom: 25px;
+  padding-bottom: 20px;
   color: var(--primary);
 }
 
 h3 {
+  padding-top: 10px;
   color: var(--primary);
 }
 
@@ -110,11 +98,11 @@ a:hover, a:focus {
 /* FORMS */
 
 .input-field {
-  font-size: 1rem;
+  font-size: 16px;
   color: var(--on-background);
   width: 100%;
-  padding: 0.5rem 0.5rem;
-  margin-top: 0.5rem;
+  padding: 8px;
+  margin-top: 12px;
   outline: none;
   border: 1px solid var(--border);
   border-radius: 3px;
@@ -186,7 +174,7 @@ form > .btn {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 20px;
+  margin-top: 40px;
 }
 
 .user-actions > * {
